<input disabled> incorrectly responds to dispatchEvent()
Categories
(Core :: DOM: Events, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox84 | --- | fixed |
People
(Reporter: saschanaz, Assigned: saschanaz)
References
Details
Attachments
(2 files)
<input disabled> must not respond to dispatchEvent(new MouseEvent("click"))
unless they are checkboxes or radio buttons, but they do.
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 1•5 years ago
|
||
Depends on D87022
Updated•5 years ago
|
Assignee | ||
Comment 2•5 years ago
|
||
Context: https://phabricator.services.mozilla.com/D87151#inline-498464
The type changing behavior differs between Firefox and Chrome. On Firefox the original radio button does remain checked, while on Chrome the target input remains checked even when it's not a radio button anymore, with .checked === true
.
The spec currently seems to support Chrome one, as it requires the legacy cancelation behavior only if its current type is radio button.
Should I file a spec issue, or should we follow Chrome behavior? My personal preference is the current Firefox behavior, though.
Comment 3•5 years ago
|
||
Hmm, Chrome's behavior feels odd. Can you think of reason for that?
Assignee | ||
Comment 4•5 years ago
|
||
No reason I can think of. Probably a new spec issue?
Comment 5•5 years ago
|
||
yeah. I think keeping checked==true feels a bit odd.
Assignee | ||
Comment 6•5 years ago
|
||
![]() |
||
Updated•5 years ago
|
Comment 11•5 years ago
|
||
bugherder |
Description
•