Bug 1659218 - Prevent activating disabled inputs via dispatchEvent r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D87151